[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retune"
dynamic = ["version"]   # 👈 version pilotée par git
description = "ReTune: Learning of Restarted Truncated Neural Networks for inverse problems. See related paper."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Leo DAVY", email = "leo.davy@ens-lyon.fr" }
]
keywords = ["unrolled", "inverse problem", "deep-equilibrium", "jacobian-free", "learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Typing :: Typed"
]
dependencies = [
  "numpy",
  "deepinv>=0.3.0",
  "wandb",
  "h5py",
  "matplotlib",
  "pywavelets>=1.7"
  "pytorch-wavelets @ git+https://github.com/fbcotter/pytorch_wavelets.git"
]

[project.urls]
Homepage = "https://github.com/DavyL/ReTune"

[project.scripts]
retune = "retune.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["retune*"]

[tool.setuptools.package-data]
"retune" = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
write_to = "src/retune/_version.py"